--- a/README
+++ b/README
@@ -8,7 +8,7 @@ BUILDING ON UNIX etc.
 
 To compile your new extension, you will have to execute the following steps:
 
-1.  $ ./phpize
+1.  $ phpize
 2.  $ ./configure --with-pdo_4d
 3.  $ make clean
 4.  $ make
